--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@
 
 #bg-img{
     max-width: 100vw;
-    max-height: 150vw;
     margin-top: -60PX;
 }
 
@@ -78,11 +77,11 @@
 }
 
 
-#dark-text{
+.dark-text{
     color:#071952 !important;
 }
 
-#light-text{
+.light-text{
     color:#ffffff !important;
 }
 
@@ -119,8 +118,8 @@
 @media screen and (min-width: 768px) {
     .navbar-brand{
         display: flex;
-        padding-left: 10px !important;
-        margin-right: auto !important;
+        padding-left: 10px;
+        margin-right: auto;
     }
 
 }
@@ -136,4 +135,13 @@
     .navbar-brand{
         display: flex;
     }
+}
+
+#menu-button{
+    display:none; 
+}
+
+/* Nav toggle */
+#menu-button:checked~#navbarSupportedContent {
+    display: block !important;
 }
