--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,21 +4,25 @@
     font-style:normal;
   }
 
-
-.navbar{
-    background-color: transparent !important;
-}
-
-
 #menu-button{
     display:none; 
 }
 
 /* Nav toggle */
 #menu-button:checked~#navbarSupportedContent {
-    display: block !important;
+    display: block;
+    background-color: #088395;
+
 }
 
+.navbar:has(#menu-button:checked){
+    background-color: #088395;
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+}
 
 #bg-img{
     max-width: 100vw;
@@ -29,25 +33,19 @@
     max-width: 30px;
     max-height: 30px;
     margin-right: 5px;
-}
-
-
-.navbar-brand p{
-    color: #161D6F !important;
-    letter-spacing: 2.5px;
-    display: none;
-}
-
-.nav-link{
-    color: #161D6F !important;
+    background-color: #ffffff;
+    border-radius: 30%;
 }
 
 .navbar-nav{
     margin-left: 10px;
 }
 
+.navbar{
+    animation: anim-opacity-99 525ms linear;
+    transform-origin: 0px 0px;
 
-
+}
 
 #card1{
     background-color: #ffffff;
@@ -93,14 +91,23 @@
 
 }
 
-.celebrity-card-container,.celebrity-card{
+.celebrity-card-container,.celebrity-card,.recipe-card-container,.recipe-card{
     height: 100%;
 }
 
-.celebrity-img{
+.recipe-card{
+    border-width: 0;
+}
+
+.celebrity-img, .recipe-img{
     height: inherit;
     object-fit: cover;
 }
+
+.recipe-img{
+border-radius: 50%;
+}
+
 
 .dark-text{
     color:rgb(52, 51, 51) !important;
@@ -116,12 +123,16 @@
 }
 /* Footer */
 #footer-bar {
+
     background-color: #088395;
     text-align: center;
     padding: 20px 0;
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
+    width: 100%;
+    bottom: 0;
+    margin: 0;
 }
 
 #footer-bar a {
@@ -129,33 +140,49 @@
     color: #ffffff;
 }
 
+.navbar-brand p{
+    color: #161D6F !important;
+    letter-spacing: 2.5px;
+    display: none;
+}
 
 /* Media query: large or landscape phones (576px and up) */
 @media screen and (min-width: 576px) {
-    #photos {
-        column-count: 2;
-        column-gap: 0;
-    }
+
 }
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
-    .navbar-brand p{
-        display: inline;
-    }
 
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
-@media screen and (min-width: 992px) {
+ @media screen and (min-width: 992px) {
+    .navbar{
+        background-color: #088395;
+        position: relative!important;
+    }
     .navbar-brand p{
         display: inline;
+        color: #ffffff !important;
+
     }
+
 }
 
 @media screen and (min-width: 1200px) {    
+    .navbar{
+        background-color: #088395;
+        position: relative!important;
+    }
+    
     .navbar-brand p{
+        color: #ffffff !important;       
         display: inline;
+    
     }
 }
 
+.nav-link {
+    color: white !important;
+}
