--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,8 +88,15 @@
     height: 100%;
     width: 100%;
     text-decoration: none;
-
 }
+
+
+.recipe-div a{
+    display: block;
+    height: 100%;
+    width: 100%;
+}
+
 
 .celebrity-card-container,.celebrity-card,.recipe-card-container,.recipe-card{
     height: 100%;
@@ -99,6 +106,10 @@
     border-width: 0;
 }
 
+#recipes-header-card{
+    border-width: 0;
+    margin-bottom: ;
+}
 .celebrity-img, .recipe-img{
     height: inherit;
     object-fit: cover;
@@ -153,7 +164,11 @@ border-radius: 50%;
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+    .navbar-brand p{
+        display: inline;
+        margin-left: 38vw;
 
+    }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
@@ -164,7 +179,9 @@ border-radius: 50%;
     }
     .navbar-brand p{
         display: inline;
+        margin-left: 0;
         color: #ffffff !important;
+
 
     }
 
