--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@
     font-style:normal;
   }
 
+/* Header */
+header{
+    height: 6vh;
+}
+
 #menu-button{
     display:none; 
 }
@@ -132,7 +137,61 @@ border-radius: 50%;
 .card-title{
     text-align: center;
 }
+
+/* Form */
+#signup {
+    background-image: url("../images/bg5.jpeg");
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+    height: 88vh;
+}
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(21, 41, 41, 0.6);
+    padding: 30px;
+}
+
+#signup-form>h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #088395;
+    color: #fafafa;
+}
+
+
+
 /* Footer */
+footer{
+    height: 6vh;
+}
+
 #footer-bar {
 
     background-color: #088395;
@@ -141,6 +200,7 @@ border-radius: 50%;
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
+    
     width: 100%;
     bottom: 0;
     margin: 0;
@@ -167,8 +227,35 @@ border-radius: 50%;
     .navbar-brand p{
         display: inline;
         margin-left: 38vw;
-
     }
+
+     /* Form 
+     #signup {
+        background-image: url("../images/bg5.jpeg");
+        background-size: cover;
+        background-position: 75%;
+        padding: 20px 10% 0 10%;
+        flex-grow: 1;
+    }
+
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
+    }
+
+    */
+    
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
