--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,10 +29,13 @@ header {
     height: 100%;
     width: 100%;
     z-index: 1;
-    
-    
+
+
 }
 
+.container-fluid{
+    margin-top: 20px;
+}
 
 #signup-main {
     margin-top: -8vh;
@@ -108,7 +111,7 @@ header {
 }
 
 .card-img-top {
-    max-width: 50vw;
+    max-width: 70vw;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -128,6 +131,7 @@ header {
     display: block;
     height: 100%;
     width: 100%;
+    text-decoration: none;
 }
 
 
@@ -154,12 +158,15 @@ header {
 
 .recipe-img {
     border-radius: 50%;
+    width: 65%;
+    margin: auto;
 }
 
 .recipe-details-img {
     max-height: 60vh;
     object-fit: contain;
-    border: 3px solid #161D6F;
+    border-width: 0;
+    /* border: 1px solid #161D6F; */
 }
 
 #celebrities-header-card {
@@ -247,7 +254,8 @@ footer {
 #footer-bar {
 
     /* background-color: #088395; */
-    background: linear-gradient(0deg, rgba(0,64,73,1) 0%, rgba(8,131,149,1) 0%, rgba(69,191,208,1) 73%, rgba(255,255,255,1) 100%);    text-align: center;
+    background: linear-gradient(0deg, rgba(0, 64, 73, 1) 0%, rgba(8, 131, 149, 1) 0%, rgba(69, 191, 208, 1) 73%, rgba(255, 255, 255, 1) 100%);
+    text-align: center;
     padding: 20px 0;
     display: flex;
     justify-content: space-evenly;
@@ -264,7 +272,7 @@ footer {
 }
 
 .navbar-brand p {
-    color: #161D6F !important;
+    color: #45bfd0!important;
     letter-spacing: 2.5px;
     display: none;
 }
@@ -278,12 +286,16 @@ footer {
         display: inline;
         /*    margin-left: 38vw; */
     }
+
+    .card-img-top {
+        max-width: 60vw;
+    }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     .navbar {
-        background: linear-gradient(180deg, rgba(0,64,73,1) 0%, rgba(8,131,149,1) 0%, rgba(69,191,208,1) 73%, rgba(255,255,255,1) 100%);
+        background: linear-gradient(180deg, rgba(0, 64, 73, 1) 0%, rgba(8, 131, 149, 1) 0%, rgba(69, 191, 208, 1) 73%, rgba(255, 255, 255, 1) 100%);
 
         position: relative !important;
         height: 100%;
@@ -297,6 +309,15 @@ footer {
 
     }
 
+
+    .card-img-top {
+        max-width: 50vw;
+    }
+
+    #recipe-main-section{
+        margin-top: 30px;
+    }
+
 }
 
 @media screen and (min-width: 1200px) {
@@ -304,9 +325,10 @@ footer {
         /* background-color: #088395; */
         position: relative !important;
 
-        background: linear-gradient(180deg, rgba(0,64,73,1) 0%, rgba(8,131,149,1) 0%, rgba(69,191,208,1) 73%, rgba(255,255,255,1) 100%);
+        background: linear-gradient(180deg, rgba(0, 64, 73, 1) 0%, rgba(8, 131, 149, 1) 0%, rgba(69, 191, 208, 1) 73%, rgba(255, 255, 255, 1) 100%);
     }
-        .navbar-brand p {
+
+    .navbar-brand p {
         color: #ffffff !important;
         display: inline;
 
@@ -331,21 +353,20 @@ footer {
     display: inline;
 }
 
+/* When the checkbox is checked, hide the open icon and show the close icon */
+#menu-button:checked~label .menu-button-open {
+    display: none;
+}
 
+#menu-button:checked~label .menu-button-close::before {
+    display: inline;
+}
+
+#menu-button:checked~label span {
+    border-color: white;
+}
 /* Initially hide the close icon */
-.menu-button-close {
+.menu-button-close::before {
     display: none;
     color: white;
-  }
-  
-  /* When the checkbox is checked, hide the open icon and show the close icon */
-  #menu-button:checked ~ label .menu-button-open {
-    display: none;
-  }
-  
-  #menu-button:checked ~ label .menu-button-close {
-    display: inline;
-  }
-  #menu-button:checked ~ label span {
-    border-color: white;
-  }
+}
