--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,10 @@ header {
 }
 
 
-
+#about-div{
+    margin-left: 10vw;
+    margin-right: 10vw;
+}
 /* Footer */
 footer {
     height: 6vh;
@@ -282,6 +285,7 @@ footer {
 #footer-bar a {
 
     color: #ffffff;
+    text-decoration: none;
 }
 
 .navbar-brand p {
@@ -347,6 +351,10 @@ footer {
     .lp-div-img-horizontal{
         display: inline;
     }
+
+    #about-div{
+        margin-top: 5vh;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -375,6 +383,10 @@ footer {
     .lp-div-img-horizontal{
         display: inline;
     }
+
+    #about-div{
+        margin-top: 5vh;
+    }
 }
 
 
@@ -382,11 +394,6 @@ footer {
     color: white !important;
 }
 
-
-#card1 img,
-#card3 img {
-    /* box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.5); */
-}
 
 .recipe-content {
     display: none;
